--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  google_maps_flutter: ^2.2.0
+  flutter_riverpod: ^2.0.0
+  flutter_map: ^8.1.1  # Latest stable version
+  latlong2: ^0.9.0     # Now compatible with newer flutter_map
+  go_router: ^6.0.0
+  location: ^5.0.0
+  http: ^1.1.0
+  flutter_typeahead: ^5.0.0
+     # For LatLng operations
+  riverpod: ^2.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -59,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/profile.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
